// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Testing  Has a valid snapshot  1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <input
          onChange={[Function]}
          placeholder="Search"
          type="text"
        />
        <button
          className="btn"
        >
          Search
        </button>
      </form>
    </div>
  </div>
  <div
    className="table"
  >
    <div
      className="table-header "
    >
      <span
        style={
          Object {
            "width": "40%",
          }
        }
      >
        <span
          className="btn"
        >
          <button
            onClick={[Function]}
            type="button"
          >
            Title
          </button>
        </span>
      </span>
      <span
        style={
          Object {
            "width": "30%",
          }
        }
      >
        <span
          className="btn"
        >
          <button
            onClick={[Function]}
            type="button"
          >
            Author
          </button>
        </span>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <span
          className="btn"
        >
          <button
            onClick={[Function]}
            type="button"
          >
            Comments
          </button>
        </span>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <span
          className="btn"
        >
          <button
            onClick={[Function]}
            type="button"
          >
            Points
          </button>
        </span>
      </span>
      <button
        className="button"
        style={
          Object {
            "width": "10%",
          }
        }
      >
        Archive
      </button>
    </div>
  </div>
  <div
    className="btn"
  >
    <button
      type="button"
    >
      Loading ....
    </button>
  </div>
</div>
`;

exports[`Button Testing Has valid snapshot 1`] = `
<span
  className="btn"
>
  <button
    type="button"
  >
    Add More 
  </button>
</span>
`;

exports[`ListItem Testing Has valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header "
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <span
        className="btn"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          Title
        </button>
      </span>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <span
        className="btn"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          Author
        </button>
      </span>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <span
        className="btn"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          Comments
        </button>
      </span>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <span
        className="btn"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          Points
        </button>
      </span>
    </span>
    <button
      className="button"
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Archive
    </button>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      className="btn"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      className="btn"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;

exports[`Search Testing   Has a valid snapshot  1`] = `
<div>
  <form>
    <input
      placeholder="Search"
      type="text"
    />
    <button
      className="btn"
    >
      Search
    </button>
  </form>
</div>
`;
